sklearn: model eval with cross validation and scoring param

--- a/introduction-to-sckit-learn.ipynb
+++ b/introduction-to-sckit-learn.ipynb
@@ -396,83 +396,83 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>191</th>\n",
+       "      <th>175</th>\n",
+       "      <td>40</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>110</td>\n",
+       "      <td>167</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>114</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55</th>\n",
+       "      <td>52</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>134</td>\n",
+       "      <td>201</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>158</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>292</th>\n",
+       "      <td>58</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>170</td>\n",
+       "      <td>225</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>146</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>256</th>\n",
        "      <td>58</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>128</td>\n",
-       "      <td>216</td>\n",
+       "      <td>259</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>131</td>\n",
+       "      <td>130</td>\n",
        "      <td>1</td>\n",
-       "      <td>2.2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>253</th>\n",
-       "      <td>67</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>100</td>\n",
-       "      <td>299</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>125</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.9</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>207</th>\n",
-       "      <td>60</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>150</td>\n",
-       "      <td>258</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>157</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2.6</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>90</th>\n",
-       "      <td>48</td>\n",
+       "      <th>118</th>\n",
+       "      <td>46</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>124</td>\n",
-       "      <td>255</td>\n",
+       "      <td>105</td>\n",
+       "      <td>204</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>175</td>\n",
+       "      <td>172</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>234</th>\n",
-       "      <td>70</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>130</td>\n",
-       "      <td>322</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>109</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2.4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -492,84 +492,84 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>244</th>\n",
-       "      <td>56</td>\n",
+       "      <th>30</th>\n",
+       "      <td>41</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>132</td>\n",
-       "      <td>184</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>105</td>\n",
+       "      <td>198</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>2.1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>167</th>\n",
-       "      <td>62</td>\n",
+       "      <td>168</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>140</td>\n",
-       "      <td>268</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>160</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3.6</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>164</th>\n",
+       "      <th>229</th>\n",
+       "      <td>64</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>125</td>\n",
+       "      <td>309</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>131</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>259</th>\n",
        "      <td>38</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>138</td>\n",
-       "      <td>175</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>173</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>272</th>\n",
-       "      <td>67</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>3</td>\n",
        "      <td>120</td>\n",
-       "      <td>237</td>\n",
+       "      <td>231</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>71</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>182</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.8</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>42</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>148</td>\n",
+       "      <td>244</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>178</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>48</th>\n",
-       "      <td>53</td>\n",
+       "      <th>199</th>\n",
+       "      <td>65</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>110</td>\n",
+       "      <td>248</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>158</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.6</td>\n",
        "      <td>2</td>\n",
-       "      <td>128</td>\n",
-       "      <td>216</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>115</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -578,30 +578,30 @@
       ],
       "text/plain": [
        "     age  sex  cp  trestbps  chol  fbs  restecg  thalach  exang  oldpeak  \\\n",
-       "191   58    1   0       128   216    0        0      131      1      2.2   \n",
-       "253   67    1   0       100   299    0        0      125      1      0.9   \n",
-       "207   60    0   0       150   258    0        0      157      0      2.6   \n",
-       "90    48    1   2       124   255    1        1      175      0      0.0   \n",
-       "234   70    1   0       130   322    0        0      109      0      2.4   \n",
+       "175   40    1   0       110   167    0        0      114      1      2.0   \n",
+       "55    52    1   1       134   201    0        1      158      0      0.8   \n",
+       "292   58    0   0       170   225    1        0      146      1      2.8   \n",
+       "256   58    1   0       128   259    0        0      130      1      3.0   \n",
+       "118   46    0   1       105   204    0        1      172      0      0.0   \n",
        "..   ...  ...  ..       ...   ...  ...      ...      ...    ...      ...   \n",
-       "244   56    1   0       132   184    0        0      105      1      2.1   \n",
-       "167   62    0   0       140   268    0        0      160      0      3.6   \n",
-       "164   38    1   2       138   175    0        1      173      0      0.0   \n",
-       "272   67    1   0       120   237    0        1       71      0      1.0   \n",
-       "48    53    0   2       128   216    0        0      115      0      0.0   \n",
+       "30    41    0   1       105   198    0        1      168      0      0.0   \n",
+       "229   64    1   2       125   309    0        1      131      1      1.8   \n",
+       "259   38    1   3       120   231    0        1      182      1      3.8   \n",
+       "100   42    1   3       148   244    0        0      178      0      0.8   \n",
+       "199   65    1   0       110   248    0        0      158      0      0.6   \n",
        "\n",
        "     slope  ca  thal  \n",
-       "191      1   3     3  \n",
-       "253      1   2     2  \n",
-       "207      1   2     3  \n",
-       "90       2   2     2  \n",
-       "234      1   3     2  \n",
+       "175      1   0     3  \n",
+       "55       2   1     2  \n",
+       "292      1   2     1  \n",
+       "256      1   2     3  \n",
+       "118      2   0     2  \n",
        "..     ...  ..   ...  \n",
-       "244      1   1     1  \n",
-       "167      0   2     2  \n",
-       "164      2   4     2  \n",
-       "272      1   0     2  \n",
-       "48       2   0     0  \n",
+       "30       2   1     2  \n",
+       "229      1   0     3  \n",
+       "259      1   0     3  \n",
+       "100      2   2     2  \n",
+       "199      2   2     1  \n",
        "\n",
        "[242 rows x 13 columns]"
       ]
@@ -660,9 +660,9 @@
     {
      "data": {
       "text/plain": [
-       "array([0, 0, 1, 0, 1, 1, 1, 0, 0, 0, 1, 1, 0, 0, 0, 1, 1, 1, 0, 1, 1, 0,\n",
-       "       1, 1, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1, 0, 0, 0, 0, 1, 1, 1, 1, 0, 1,\n",
-       "       1, 0, 1, 0, 1, 0, 0, 1, 1, 0, 1, 1, 1, 1, 0, 0, 1], dtype=int64)"
+       "array([0, 1, 0, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 0, 1, 1, 1, 0, 0, 1, 0, 1, 1, 1, 1, 0, 1, 0, 0, 1, 1, 0, 1,\n",
+       "       0, 0, 1, 1, 0, 1, 1, 0, 1, 0, 1, 1, 1, 1, 0, 1, 0], dtype=int64)"
       ]
      },
      "execution_count": 9,
@@ -685,17 +685,17 @@
     {
      "data": {
       "text/plain": [
-       "274    0\n",
-       "206    0\n",
-       "51     1\n",
-       "165    0\n",
-       "83     1\n",
+       "1      1\n",
+       "132    1\n",
+       "241    0\n",
+       "71     1\n",
+       "293    0\n",
        "      ..\n",
-       "94     1\n",
-       "182    0\n",
-       "213    0\n",
-       "170    0\n",
-       "93     1\n",
+       "283    0\n",
+       "92     1\n",
+       "165    0\n",
+       "77     1\n",
+       "227    0\n",
        "Name: target, Length: 61, dtype: int64"
       ]
      },
@@ -4032,7 +4032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "fe03e02e-8ed6-416f-8f9f-5e870bd5e2d1",
    "metadata": {},
    "outputs": [
@@ -4066,7 +4066,7 @@
        " 'DESCR': '.. _california_housing_dataset:\\n\\nCalifornia Housing dataset\\n--------------------------\\n\\n**Data Set Characteristics:**\\n\\n    :Number of Instances: 20640\\n\\n    :Number of Attributes: 8 numeric, predictive attributes and the target\\n\\n    :Attribute Information:\\n        - MedInc        median income in block group\\n        - HouseAge      median house age in block group\\n        - AveRooms      average number of rooms per household\\n        - AveBedrms     average number of bedrooms per household\\n        - Population    block group population\\n        - AveOccup      average number of household members\\n        - Latitude      block group latitude\\n        - Longitude     block group longitude\\n\\n    :Missing Attribute Values: None\\n\\nThis dataset was obtained from the StatLib repository.\\nhttps://www.dcc.fc.up.pt/~ltorgo/Regression/cal_housing.html\\n\\nThe target variable is the median house value for California districts,\\nexpressed in hundreds of thousands of dollars ($100,000).\\n\\nThis dataset was derived from the 1990 U.S. census, using one row per census\\nblock group. A block group is the smallest geographical unit for which the U.S.\\nCensus Bureau publishes sample data (a block group typically has a population\\nof 600 to 3,000 people).\\n\\nA household is a group of people residing within a home. Since the average\\nnumber of rooms and bedrooms in this dataset are provided per household, these\\ncolumns may take surprisingly large values for block groups with few households\\nand many empty houses, such as vacation resorts.\\n\\nIt can be downloaded/loaded using the\\n:func:`sklearn.datasets.fetch_california_housing` function.\\n\\n.. topic:: References\\n\\n    - Pace, R. Kelley and Ronald Barry, Sparse Spatial Autoregressions,\\n      Statistics and Probability Letters, 33 (1997) 291-297\\n'}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4080,7 +4080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "e3dfa38f-3962-497f-9587-0889479a23ec",
    "metadata": {},
    "outputs": [
@@ -4191,7 +4191,7 @@
        "4    -122.25  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4205,7 +4205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "id": "06ccae07-1f3e-43ef-8f0f-8da1c3efb223",
    "metadata": {},
    "outputs": [
@@ -4322,7 +4322,7 @@
        "4    -122.25   3.422  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4344,7 +4344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "5d82c4d3-fb81-4040-82e2-8eafee954fd9",
    "metadata": {},
    "outputs": [
@@ -4548,7 +4548,7 @@
        "[20640 rows x 9 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4618,7 +4618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "101b40e2-1146-4c15-a159-5cd62d61e778",
    "metadata": {},
    "outputs": [
@@ -4735,7 +4735,7 @@
        "4    -122.25   3.422  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7882,12 +7882,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "ad38936d-4432-4c7a-8d36-85de7f8e1a75",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The cross-validated recall is: 0.8545454545454545\n"
+     ]
+    }
+   ],
+   "source": [
+    "# a model seems better with recall than the precision and accuracy\n",
+    "# Cross-validated recall\n",
+    "print(f\"The cross-validated recall is: {np.mean(cv_recall)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5fcfb5f-5f23-411e-a21a-153592cac79d",
+   "metadata": {},
+   "source": [
+    "Let's see the `scoring` parameter being used for a regression problem..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "bc4206aa-fdf8-4c48-920a-d041c1c4155a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# a model does better with recall than the precision and accuracy\n"
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "X = housing_df.drop(\"target\", axis=1)\n",
+    "y = housing_df[\"target\"]\n",
+    "\n",
+    "model = RandomForestRegressor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "d0b5c9b9-b68d-4f01-ad4b-6a146bfde51d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.653726846238643"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.seed(42)\n",
+    "\n",
+    "cv_r2 = cross_val_score(model, X, y, cv=3, scoring=None)\n",
+    "np.mean(cv_r2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "8dd2ee33-4dc0-4b08-b261-5121b47da298",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.6202544 , 0.72010179, 0.62082435])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv_r2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1b7f6b6-9d13-4330-9c07-fdb5c8d5cf45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# mean absolute error\n",
+    "cv_mae = cross_val_score(model, X, y, cv=3, scoring=\"neg_mean_absolute_error\")\n",
+    "np.mean(cv_mae)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cded1c0c-07cb-4b5a-b114-0e0f93346121",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv_"
    ]
   }
  ],
