--- a/introduction-to-sckit-learn.ipynb
+++ b/introduction-to-sckit-learn.ipynb
@@ -7973,10 +7973,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "b1b7f6b6-9d13-4330-9c07-fdb5c8d5cf45",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.4851576919961242"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# mean absolute error\n",
     "cv_mae = cross_val_score(model, X, y, cv=3, scoring=\"neg_mean_absolute_error\")\n",
@@ -7985,12 +7996,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "cded1c0c-07cb-4b5a-b114-0e0f93346121",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.52368728, -0.42481777, -0.50696803])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv_mae"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "496ef7b4-3058-442a-ba06-ec084f51ed0f",
+   "metadata": {},
+   "source": [
+    "## 4.3 Using different evaluation metrics as Scikit-Learn functions\n",
+    "\n",
+    "The 3rd way to evaluate scikit-learn ML models is to using `sklean.metrics` module"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "4ecad128-5b7f-47c4-afc6-45893f277c23",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classifier metrics on the test set\n",
+      "Accuracy: 85.25%\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "# create X & y\n",
+    "X = heart_disease.drop(\"target\", axis=1)\n",
+    "y = heart_disease[\"target\"]\n",
+    "\n",
+    "# Split data\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
+    "\n",
+    "# Create model\n",
+    "clf = RandomForestClassifier()\n",
+    "\n",
+    "# Fit model\n",
+    "clf.fit(X_train, y_train)\n",
+    "\n",
+    "#Make predicitons\n",
+    "y_preds = clf.predict(X_test)\n",
+    "\n",
+    "# Evaluate model using evaluation functions\n",
+    "print(\"Classifier metrics on the test set\")\n",
+    "print(f\"Accuracy: {accuracy_score(y_test, y_preds)*100:.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7cc6bab-380d-4f31-a183-13fe590fe777",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv_"
+    "from sklearn.metrics import r2_score, mean_absolute_error, mean_squared_error\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "# create X & y\n",
+    "X = heart_disease.drop(\"target\", axis=1)\n",
+    "y = heart_disease[\"target\"]\n",
+    "\n",
+    "# Split data\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
+    "\n",
+    "# Create model\n",
+    "clf = RandomForestRegressor()\n",
+    "\n",
+    "# Fit model\n",
+    "clf.fit(X_train, y_train)\n",
+    "\n",
+    "# Evaluate model using evaluation functions\n",
+    "b"
    ]
   }
  ],
