--- a/introduction-to-sckit-learn.ipynb
+++ b/introduction-to-sckit-learn.ipynb
@@ -8071,8 +8071,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "f7cc6bab-380d-4f31-a183-13fe590fe777",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Regression metrics on the test set\n",
+      "R2 score: 0.8059837014172988\n",
+      "MAE: 0.32672061405038777\n",
+      "MSE: 0.2542406995878388\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import r2_score, mean_absolute_error, mean_squared_error\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "# create X & y\n",
+    "X = housing_df.drop(\"target\", axis=1)\n",
+    "y = housing_df[\"target\"]\n",
+    "\n",
+    "# Split data\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
+    "\n",
+    "# Create model\n",
+    "clf = RandomForestRegressor()\n",
+    "\n",
+    "# Fit model\n",
+    "clf.fit(X_train, y_train)\n",
+    "\n",
+    "#Make predicitons\n",
+    "y_preds = clf.predict(X_test)\n",
+    "\n",
+    "# Evaluate model using evaluation functions\n",
+    "print(\"Regression metrics on the test set\")\n",
+    "print(f\"R2 score: {r2_score(y_test, y_preds)}\")\n",
+    "print(f\"MAE: {mean_absolute_error(y_test, y_preds)}\")\n",
+    "print(f\"MSE: {mean_squared_error(y_test, y_preds)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9eba3ae5-d64c-462f-b0c1-2060dde2a5b9",
    "metadata": {},
    "outputs": [],
    "source": []
