sklearn: evaluation_preds func

--- a/introduction-to-sckit-learn.ipynb
+++ b/introduction-to-sckit-learn.ipynb
@@ -8117,12 +8117,200 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "88c266fd-dffc-4309-a243-d34aa14e7cf0",
+   "metadata": {},
+   "source": [
+    "## 5. Improving a model\n",
+    "\n",
+    "First predictions = baseline predictions.\n",
+    "First model = baseline model.\n",
+    "\n",
+    "From a data perspective: \n",
+    "\n",
+    "* Could we collect more data? (generally, the more data, the better)\n",
+    "* Could we improve our data? (More depth of each sample)\n",
+    "\n",
+    "From a model perspective: \n",
+    "* Is there a better model we could use? (could we use a more complex one)\n",
+    "* Could we improve the current model? (can adjust hyper-params)\n",
+    "\n",
+    "Hyperparameters vs Parameters\n",
+    "* Parameters = model find these patterns in data.\n",
+    "* Hperparameters = settings on a model you can adjust to (potentially) improve its ability to find patterns.\n",
+    "\n",
+    "Three ways to adjust hyperparameters:\n",
+    "1. By hand.\n",
+    "2. Randomly with RandomSearchCV\n",
+    "3. Exhaustively with GridSearchCV"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9eba3ae5-d64c-462f-b0c1-2060dde2a5b9",
+   "execution_count": 20,
+   "id": "f368b311-0117-4ceb-80e3-92783cc25d25",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "clf = RandomForestClassifier()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "189856e4-08e0-45ce-a2e4-e40f107abab1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'bootstrap': True,\n",
+       " 'ccp_alpha': 0.0,\n",
+       " 'class_weight': None,\n",
+       " 'criterion': 'gini',\n",
+       " 'max_depth': None,\n",
+       " 'max_features': 'sqrt',\n",
+       " 'max_leaf_nodes': None,\n",
+       " 'max_samples': None,\n",
+       " 'min_impurity_decrease': 0.0,\n",
+       " 'min_samples_leaf': 1,\n",
+       " 'min_samples_split': 2,\n",
+       " 'min_weight_fraction_leaf': 0.0,\n",
+       " 'n_estimators': 100,\n",
+       " 'n_jobs': None,\n",
+       " 'oob_score': False,\n",
+       " 'random_state': None,\n",
+       " 'verbose': 0,\n",
+       " 'warm_start': False}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# after instantiating the model we can access its hyper-params\n",
+    "clf.get_params()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a94cfb7f-6e58-4c08-88de-03da7c248e8d",
+   "metadata": {},
+   "source": [
+    "### 5.1 Tunning hyperparameters by hand\n",
+    "\n",
+    "Let's make 3 sets, training, validation and test."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "17423b05-3318-4bc4-8c3e-d7c483980f7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'bootstrap': True,\n",
+       " 'ccp_alpha': 0.0,\n",
+       " 'class_weight': None,\n",
+       " 'criterion': 'gini',\n",
+       " 'max_depth': None,\n",
+       " 'max_features': 'sqrt',\n",
+       " 'max_leaf_nodes': None,\n",
+       " 'max_samples': None,\n",
+       " 'min_impurity_decrease': 0.0,\n",
+       " 'min_samples_leaf': 1,\n",
+       " 'min_samples_split': 2,\n",
+       " 'min_weight_fraction_leaf': 0.0,\n",
+       " 'n_estimators': 100,\n",
+       " 'n_jobs': None,\n",
+       " 'oob_score': False,\n",
+       " 'random_state': None,\n",
+       " 'verbose': 0,\n",
+       " 'warm_start': False}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# baseline parameters\n",
+    "clf.get_params()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1512e9f1-dfca-4819-b070-d4c22a80aa90",
+   "metadata": {},
+   "source": [
+    "We're going to try and adjust the following:\n",
+    "\n",
+    "* `max_depth`\n",
+    "* `max_features`\n",
+    "* `min_samples_leaf`\n",
+    "* `min_samples_split`\n",
+    "* `n_estimators`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "4d5daad6-0d34-426b-a3a9-cfb68c9222bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate_preds(y_true, y_preds):\n",
+    "    \"\"\"\n",
+    "        Perfoms evaluation comparison on y_true labels vs y_pred labels \n",
+    "        on a classification\n",
+    "    \"\"\"\n",
+    "    accuracy = accuracy(y_true, y_preds)\n",
+    "    precision = precision_score(y_true, y_preds)\n",
+    "    recall = recall_score(y_true, y_preds)\n",
+    "    f1 = f1_score(y_true, y_preds)\n",
+    "    metric_dict = {\"accuracy\": round(accuracy, 2), \n",
+    "                   \"precision\": round(precision, 2),\n",
+    "                   \"recall\": round(recall, 2),\n",
+    "                   \"f1\": round(f1, 2)}\n",
+    "    print(f\"Acc: {accuracy*100:.2f}%\")\n",
+    "    print(f\"Precision: {precision:.2f}\")\n",
+    "    print(f\"Recall: {recall:.2f}\")\n",
+    "    print(f\"F1 score: {f1:.2f}\")\n",
+    "\n",
+    "    return metric_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2beea45-729a-4f7b-b27f-d93ff460cef9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "# shuffle the data\n",
+    "heart_disease_shuffled = heart_disease.sample(frac=1)\n",
+    "\n",
+    "# split into X & y\n",
+    "X = heart_disease_shuffled(\"target\",axis=1)\n",
+    "y = heart_disease_shuffled[\"target\"]\n",
+    "\n",
+    "# Split the data into train, validation & test sets\n",
+    "train_split = round(0.7 * len(heart_disease_shuffled)) # 70% of the data\n",
+    "train_split = round(train_split + 0.15 * len(heart_disease_shuffled)) # 15% of the data\n",
+    "X_train, y_train = X[:train_split], y[:train_split]\n",
+    "X_valid, y_valid = X[train_split:valid_split]"
+   ]
   }
  ],
  "metadata": {
