--- a/introduction-to-sckit-learn.ipynb
+++ b/introduction-to-sckit-learn.ipynb
@@ -4032,7 +4032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "fe03e02e-8ed6-416f-8f9f-5e870bd5e2d1",
    "metadata": {},
    "outputs": [
@@ -4066,7 +4066,7 @@
        " 'DESCR': '.. _california_housing_dataset:\\n\\nCalifornia Housing dataset\\n--------------------------\\n\\n**Data Set Characteristics:**\\n\\n    :Number of Instances: 20640\\n\\n    :Number of Attributes: 8 numeric, predictive attributes and the target\\n\\n    :Attribute Information:\\n        - MedInc        median income in block group\\n        - HouseAge      median house age in block group\\n        - AveRooms      average number of rooms per household\\n        - AveBedrms     average number of bedrooms per household\\n        - Population    block group population\\n        - AveOccup      average number of household members\\n        - Latitude      block group latitude\\n        - Longitude     block group longitude\\n\\n    :Missing Attribute Values: None\\n\\nThis dataset was obtained from the StatLib repository.\\nhttps://www.dcc.fc.up.pt/~ltorgo/Regression/cal_housing.html\\n\\nThe target variable is the median house value for California districts,\\nexpressed in hundreds of thousands of dollars ($100,000).\\n\\nThis dataset was derived from the 1990 U.S. census, using one row per census\\nblock group. A block group is the smallest geographical unit for which the U.S.\\nCensus Bureau publishes sample data (a block group typically has a population\\nof 600 to 3,000 people).\\n\\nA household is a group of people residing within a home. Since the average\\nnumber of rooms and bedrooms in this dataset are provided per household, these\\ncolumns may take surprisingly large values for block groups with few households\\nand many empty houses, such as vacation resorts.\\n\\nIt can be downloaded/loaded using the\\n:func:`sklearn.datasets.fetch_california_housing` function.\\n\\n.. topic:: References\\n\\n    - Pace, R. Kelley and Ronald Barry, Sparse Spatial Autoregressions,\\n      Statistics and Probability Letters, 33 (1997) 291-297\\n'}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4080,7 +4080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "e3dfa38f-3962-497f-9587-0889479a23ec",
    "metadata": {},
    "outputs": [
@@ -4191,7 +4191,7 @@
        "4    -122.25  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4205,7 +4205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "06ccae07-1f3e-43ef-8f0f-8da1c3efb223",
    "metadata": {},
    "outputs": [
@@ -4322,7 +4322,7 @@
        "4    -122.25   3.422  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4344,7 +4344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "5d82c4d3-fb81-4040-82e2-8eafee954fd9",
    "metadata": {},
    "outputs": [
@@ -4548,7 +4548,7 @@
        "[20640 rows x 9 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4559,7 +4559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "3625fa1e-26e0-4d0e-83dd-b6e1ae05aa03",
    "metadata": {},
    "outputs": [
@@ -4569,7 +4569,7 @@
        "0.5758549611440127"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8022,7 +8022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "4ecad128-5b7f-47c4-afc6-45893f277c23",
    "metadata": {},
    "outputs": [
@@ -8071,7 +8071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "f7cc6bab-380d-4f31-a183-13fe590fe777",
    "metadata": {},
    "outputs": [
@@ -8147,7 +8147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "f368b311-0117-4ceb-80e3-92783cc25d25",
    "metadata": {},
    "outputs": [],
@@ -8159,7 +8159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "189856e4-08e0-45ce-a2e4-e40f107abab1",
    "metadata": {},
    "outputs": [
@@ -8186,7 +8186,7 @@
        " 'warm_start': False}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8261,7 +8261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "id": "4d5daad6-0d34-426b-a3a9-cfb68c9222bc",
    "metadata": {},
    "outputs": [],
@@ -8271,7 +8271,7 @@
     "        Perfoms evaluation comparison on y_true labels vs y_pred labels \n",
     "        on a classification\n",
     "    \"\"\"\n",
-    "    accuracy = accuracy(y_true, y_preds)\n",
+    "    accuracy = accuracy_score(y_true, y_preds)\n",
     "    precision = precision_score(y_true, y_preds)\n",
     "    recall = recall_score(y_true, y_preds)\n",
     "    f1 = f1_score(y_true, y_preds)\n",
@@ -8289,10 +8289,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "d2beea45-729a-4f7b-b27f-d93ff460cef9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Acc: 82.22%\n",
+      "Precision: 0.81\n",
+      "Recall: 0.88\n",
+      "F1 score: 0.85\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'accuracy': 0.82, 'precision': 0.81, 'recall': 0.88, 'f1': 0.85}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
@@ -8302,15 +8323,310 @@
     "heart_disease_shuffled = heart_disease.sample(frac=1)\n",
     "\n",
     "# split into X & y\n",
-    "X = heart_disease_shuffled(\"target\",axis=1)\n",
+    "X = heart_disease_shuffled.drop(\"target\",axis=1)\n",
     "y = heart_disease_shuffled[\"target\"]\n",
     "\n",
     "# Split the data into train, validation & test sets\n",
     "train_split = round(0.7 * len(heart_disease_shuffled)) # 70% of the data\n",
-    "train_split = round(train_split + 0.15 * len(heart_disease_shuffled)) # 15% of the data\n",
+    "valid_split = round(train_split + 0.15 * len(heart_disease_shuffled)) # 15% of the data\n",
     "X_train, y_train = X[:train_split], y[:train_split]\n",
-    "X_valid, y_valid = X[train_split:valid_split]"
+    "X_valid, y_valid = X[train_split:valid_split], y[train_split:valid_split]\n",
+    "X_test, y_test = X[valid_split:], y[valid_split:]\n",
+    "\n",
+    "clf = RandomForestClassifier()\n",
+    "clf.fit(X_train, y_train)\n",
+    "\n",
+    "# Make baseline predictions\n",
+    "y_preds = clf.predict(X_valid)\n",
+    "\n",
+    "# Evaluate the classifier on validation set\n",
+    "baseline_metrics = evaluate_preds(y_valid, y_preds)\n",
+    "baseline_metrics"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "07ef636c-061e-4552-99b1-73a37639d81f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>cp</th>\n",
+       "      <th>trestbps</th>\n",
+       "      <th>chol</th>\n",
+       "      <th>fbs</th>\n",
+       "      <th>restecg</th>\n",
+       "      <th>thalach</th>\n",
+       "      <th>exang</th>\n",
+       "      <th>oldpeak</th>\n",
+       "      <th>slope</th>\n",
+       "      <th>ca</th>\n",
+       "      <th>thal</th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>231</th>\n",
+       "      <td>57</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>165</td>\n",
+       "      <td>289</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>124</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>301</th>\n",
+       "      <td>57</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>130</td>\n",
+       "      <td>131</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>115</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>104</th>\n",
+       "      <td>50</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>129</td>\n",
+       "      <td>196</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>163</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>292</th>\n",
+       "      <td>58</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>170</td>\n",
+       "      <td>225</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>146</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>159</th>\n",
+       "      <td>56</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>130</td>\n",
+       "      <td>221</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>163</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>285</th>\n",
+       "      <td>46</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>140</td>\n",
+       "      <td>311</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>120</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>276</th>\n",
+       "      <td>58</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>146</td>\n",
+       "      <td>218</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>105</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>225</th>\n",
+       "      <td>70</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>145</td>\n",
+       "      <td>174</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>125</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>59</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>150</td>\n",
+       "      <td>212</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>157</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>282</th>\n",
+       "      <td>59</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>126</td>\n",
+       "      <td>218</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>134</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>303 rows × 14 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     age  sex  cp  trestbps  chol  fbs  restecg  thalach  exang  oldpeak  \\\n",
+       "231   57    1   0       165   289    1        0      124      0      1.0   \n",
+       "301   57    1   0       130   131    0        1      115      1      1.2   \n",
+       "104   50    1   2       129   196    0        1      163      0      0.0   \n",
+       "292   58    0   0       170   225    1        0      146      1      2.8   \n",
+       "159   56    1   1       130   221    0        0      163      0      0.0   \n",
+       "..   ...  ...  ..       ...   ...  ...      ...      ...    ...      ...   \n",
+       "285   46    1   0       140   311    0        1      120      1      1.8   \n",
+       "276   58    1   0       146   218    0        1      105      0      2.0   \n",
+       "225   70    1   0       145   174    0        1      125      1      2.6   \n",
+       "26    59    1   2       150   212    1        1      157      0      1.6   \n",
+       "282   59    1   2       126   218    1        1      134      0      2.2   \n",
+       "\n",
+       "     slope  ca  thal  target  \n",
+       "231      1   3     3       0  \n",
+       "301      1   1     3       0  \n",
+       "104      2   0     2       1  \n",
+       "292      1   2     1       0  \n",
+       "159      2   0     3       1  \n",
+       "..     ...  ..   ...     ...  \n",
+       "285      1   2     3       0  \n",
+       "276      1   1     3       0  \n",
+       "225      0   0     3       0  \n",
+       "26       2   0     2       1  \n",
+       "282      1   1     1       0  \n",
+       "\n",
+       "[303 rows x 14 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "heart_disease_shuffled = heart_disease.sample(frac=1)\n",
+    "heart_disease_shuffled"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3cefadf6-ae75-4005-88a5-71954e84420e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
