--- a/introduction-to-sckit-learn.ipynb
+++ b/introduction-to-sckit-learn.ipynb
@@ -8346,278 +8346,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "07ef636c-061e-4552-99b1-73a37639d81f",
+   "execution_count": null,
+   "id": "1d98b3a7-a29e-4fe8-8f8f-bff718e377b5",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>age</th>\n",
-       "      <th>sex</th>\n",
-       "      <th>cp</th>\n",
-       "      <th>trestbps</th>\n",
-       "      <th>chol</th>\n",
-       "      <th>fbs</th>\n",
-       "      <th>restecg</th>\n",
-       "      <th>thalach</th>\n",
-       "      <th>exang</th>\n",
-       "      <th>oldpeak</th>\n",
-       "      <th>slope</th>\n",
-       "      <th>ca</th>\n",
-       "      <th>thal</th>\n",
-       "      <th>target</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>231</th>\n",
-       "      <td>57</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>165</td>\n",
-       "      <td>289</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>124</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>301</th>\n",
-       "      <td>57</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>130</td>\n",
-       "      <td>131</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>115</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104</th>\n",
-       "      <td>50</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>129</td>\n",
-       "      <td>196</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>163</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>292</th>\n",
-       "      <td>58</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>170</td>\n",
-       "      <td>225</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>146</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2.8</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>159</th>\n",
-       "      <td>56</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>130</td>\n",
-       "      <td>221</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>163</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>285</th>\n",
-       "      <td>46</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>140</td>\n",
-       "      <td>311</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>120</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>276</th>\n",
-       "      <td>58</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>146</td>\n",
-       "      <td>218</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>105</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>225</th>\n",
-       "      <td>70</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>145</td>\n",
-       "      <td>174</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>125</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2.6</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>59</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>150</td>\n",
-       "      <td>212</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>157</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.6</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>282</th>\n",
-       "      <td>59</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>126</td>\n",
-       "      <td>218</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>134</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2.2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>303 rows × 14 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     age  sex  cp  trestbps  chol  fbs  restecg  thalach  exang  oldpeak  \\\n",
-       "231   57    1   0       165   289    1        0      124      0      1.0   \n",
-       "301   57    1   0       130   131    0        1      115      1      1.2   \n",
-       "104   50    1   2       129   196    0        1      163      0      0.0   \n",
-       "292   58    0   0       170   225    1        0      146      1      2.8   \n",
-       "159   56    1   1       130   221    0        0      163      0      0.0   \n",
-       "..   ...  ...  ..       ...   ...  ...      ...      ...    ...      ...   \n",
-       "285   46    1   0       140   311    0        1      120      1      1.8   \n",
-       "276   58    1   0       146   218    0        1      105      0      2.0   \n",
-       "225   70    1   0       145   174    0        1      125      1      2.6   \n",
-       "26    59    1   2       150   212    1        1      157      0      1.6   \n",
-       "282   59    1   2       126   218    1        1      134      0      2.2   \n",
-       "\n",
-       "     slope  ca  thal  target  \n",
-       "231      1   3     3       0  \n",
-       "301      1   1     3       0  \n",
-       "104      2   0     2       1  \n",
-       "292      1   2     1       0  \n",
-       "159      2   0     3       1  \n",
-       "..     ...  ..   ...     ...  \n",
-       "285      1   2     3       0  \n",
-       "276      1   1     3       0  \n",
-       "225      0   0     3       0  \n",
-       "26       2   0     2       1  \n",
-       "282      1   1     1       0  \n",
-       "\n",
-       "[303 rows x 14 columns]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "heart_disease_shuffled = heart_disease.sample(frac=1)\n",
-    "heart_disease_shuffled"
+    "# changing n_estimators\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "# create a second clf with different hyperparams\n",
+    "clf_2 = RandomForestClassifier(n_estimators=100)\n",
+    "clf_2"
    ]
   },
   {
