sklearn: compare different models metrics

--- a/introduction-to-sckit-learn.ipynb
+++ b/introduction-to-sckit-learn.ipynb
@@ -8346,7 +8346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "id": "1d98b3a7-a29e-4fe8-8f8f-bff718e377b5",
    "metadata": {},
    "outputs": [
@@ -8354,10 +8354,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Acc: 82.22%\n",
-      "Precision: 0.84\n",
-      "Recall: 0.84\n",
-      "F1 score: 0.84\n"
+      "Acc: 91.11%\n",
+      "Precision: 0.92\n",
+      "Recall: 0.92\n",
+      "F1 score: 0.92\n"
      ]
     }
    ],
@@ -8509,7 +8509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "446799e3-9808-4363-b5eb-2997bef2079c",
    "metadata": {},
    "outputs": [
@@ -8517,10 +8517,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Acc: 81.97%\n",
-      "Precision: 0.77\n",
-      "Recall: 0.86\n",
-      "F1 score: 0.81\n"
+      "Acc: 78.69%\n",
+      "Precision: 0.74\n",
+      "Recall: 0.82\n",
+      "F1 score: 0.78\n"
      ]
     }
    ],
@@ -8740,12 +8740,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4ad1fa97-45fe-4f89-a6e4-3a2f157d2232",
+   "metadata": {},
+   "source": [
+    "Let's compare our different models metrics"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e498aa92-455a-42ab-9b92-855c75ae4587",
+   "id": "5177ae89-d965-4044-a4dd-ed90b87fb5f4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# create a data frame\n",
+    "compare_metrics = pd.DataFrame({\"baseline\": baseline_metrics,\n",
+    "                                 \"clf_2\": clf_2_metrics, \n",
+    "                                 \"random search\": rs_metrics, \n",
+    "                                 \"grid search\": gs_metrics})\n",
+    "compare_metrics.plt.bar(fig_size=)"
+   ]
   }
  ],
  "metadata": {
