sklearn: save and load ml model with joblib module

--- a/introduction-to-sckit-learn.ipynb
+++ b/introduction-to-sckit-learn.ipynb
@@ -8819,14 +8819,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "750de35a-154e-46e1-b3e6-c118938c10da",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Acc: 78.69%\n",
+      "Precision: 0.74\n",
+      "Recall: 0.82\n",
+      "F1 score: 0.78\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'accuracy': 0.79, 'precision': 0.74, 'recall': 0.82, 'f1': 0.78}"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Make some predictions\n",
     "pickle_y_preds = loaded_pickle_model.predict(X_test)\n",
-    "evaluate_preds()"
+    "evaluate_preds(y_test, pickle_y_preds)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d97f6799-d370-4378-b2c2-1e7901a21e48",
+   "metadata": {},
+   "source": [
+    "**joblib module**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "0c9e7e90-a323-43aa-b01f-084085563c66",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['gs_random_forest_model_1.joblib']"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from joblib import dump, load\n",
+    "\n",
+    "# save model to file\n",
+    "dump(gs_clf, filename=\"gs_random_forest_model_1.joblib\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "b70e210b-a4cd-48fb-a623-c535093f90ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import a saved joblib model\n",
+    "loaded_job_model = load(filename=\"gs_random_forest_model_1.joblib\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a97cde4-a1fe-46b8-aa69-1f071a5b59fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Make and evaluate jpblib predictions\n",
+    "joblib_y_preds = loaded_job_model"
    ]
   }
  ],
